<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/post_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/postBg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center_vertical|left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/post_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:padding="10dip"
                android:text="@string/negative"
                android:textColor="@color/postCancel"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2.0"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text="@string/post_title"
                android:textColor="@color/postTitle"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center_vertical|right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/post_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:padding="10dip"
                android:text="@string/post_start"
                android:textColor="@color/postHint"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <com.app.tools.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:background="@color/white"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/post_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/p_subject"
                    android:drawablePadding="5dip"
                    android:inputType="text"
                    android:maxLength="21"
                    android:textColor="@color/postText" />

                <EditText
                    android:id="@+id/post_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/p_position"
                    android:drawablePadding="5dip"
                    android:inputType="text"
                    android:textColor="@color/postText" />

                <TextView
                    android:id="@+id/post_starttime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/p_starttime"
                    android:drawablePadding="5dip"
                    android:gravity="center_vertical"
                    android:textColor="@color/postText" />
"

                <TextView
                    android:id="@+id/post_endtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/p_endtime"
                    android:drawablePadding="5dip"
                    android:gravity="center_vertical"
                    android:textColor="@color/postText" />

                <TextView
                    android:id="@+id/post_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/p_tag"
                    android:drawablePadding="5dip"
                    android:gravity="center_vertical"
                    android:textColor="@color/postText" />

                <EditText
                    android:id="@+id/post_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/p_phone"
                    android:drawablePadding="5dip"
                    android:inputType="phone"
                    android:textColor="@color/postText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingTop="10dip" >

                <EditText
                    android:id="@+id/post_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="left|top"
                    android:hint="@string/post_content_hint"
                    android:inputType="textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="5"
                    android:minLines="5"
                    android:textColor="@color/postText"
                    android:textColorHint="@color/postHint"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="15dip"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/post_choosephoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dip"
                        android:clickable="false" />

                    <TextView
                        android:id="@+id/post_addphoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawableLeft="@drawable/p_photo_add" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dip"
                        android:text="@string/post_photo_add"
                        android:textColor="@color/postHint"
                        android:textSize="19sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.app.tools.MyScrollView>

</LinearLayout>